Fixed Logo z-index issue

--- a/.vitepress/theme/style/theme.css
+++ b/.vitepress/theme/style/theme.css
@@ -274,6 +274,12 @@
     --vp-z-index-sidebar: 60;
 }
 
+@media (min-width: 960px) {
+    :root {
+        --vp-z-index-sidebar: 25;
+    }
+}
+
 /**
  * Icons
  * -------------------------------------------------------------------------- */
